// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prisma-relay-cursor-connection errors for invalid arguments (after with last) 1`] = `[Error: "after" needs to be used with "first"]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (after without first) 1`] = `[Error: "after" needs to be used with "first"]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (before with first) 1`] = `[Error: "before" needs to be used with "last"]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (before without last) 1`] = `[Error: "before" needs to be used with "last"]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (both after & before with first) 1`] = `[Error: Only one of "after" and "before" can be set]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (both after & before) 1`] = `[Error: Only one of "after" and "before" can be set]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (both first & last) 1`] = `[Error: Only one of "first" and "last" can be set]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (kitchensink) 1`] = `[Error: Only one of "first" and "last" can be set]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (negative first) 1`] = `[Error: "first" has to be positive]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (negative last) 1`] = `[Error: "last" has to be positive]`;

exports[`prisma-relay-cursor-connection multi field id returns the first 5 PROFILEs after firstname: foo1, lastname: bar1 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTAiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
      "node": Object {
        "firstname": "foo10",
        "lastname": "bar1",
      },
    },
    Object {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTAiLCJsYXN0bmFtZSI6ImJhcjEwIn19",
      "node": Object {
        "firstname": "foo10",
        "lastname": "bar10",
      },
    },
    Object {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTAiLCJsYXN0bmFtZSI6ImJhcjIifX0=",
      "node": Object {
        "firstname": "foo10",
        "lastname": "bar2",
      },
    },
    Object {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTAiLCJsYXN0bmFtZSI6ImJhcjMifX0=",
      "node": Object {
        "firstname": "foo10",
        "lastname": "bar3",
      },
    },
    Object {
      "cursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTAiLCJsYXN0bmFtZSI6ImJhcjQifX0=",
      "node": Object {
        "firstname": "foo10",
        "lastname": "bar4",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTAiLCJsYXN0bmFtZSI6ImJhcjQifX0=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJmaXJzdG5hbWVfbGFzdG5hbWUiOnsiZmlyc3RuYW1lIjoiZm9vMTAiLCJsYXN0bmFtZSI6ImJhcjEifX0=",
  },
  "totalCount": 19,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns all USERs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MX0=",
      "node": Object {
        "email": "user1@email.com",
        "id": 1,
      },
    },
    Object {
      "cursor": "eyJpZCI6Mn0=",
      "node": Object {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    Object {
      "cursor": "eyJpZCI6M30=",
      "node": Object {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    Object {
      "cursor": "eyJpZCI6NH0=",
      "node": Object {
        "email": "user4@email.com",
        "id": 4,
      },
    },
    Object {
      "cursor": "eyJpZCI6NX0=",
      "node": Object {
        "email": "user5@email.com",
        "id": 5,
      },
    },
    Object {
      "cursor": "eyJpZCI6Nn0=",
      "node": Object {
        "email": "user6@email.com",
        "id": 6,
      },
    },
    Object {
      "cursor": "eyJpZCI6N30=",
      "node": Object {
        "email": "user7@email.com",
        "id": 7,
      },
    },
    Object {
      "cursor": "eyJpZCI6OH0=",
      "node": Object {
        "email": "user8@email.com",
        "id": 8,
      },
    },
    Object {
      "cursor": "eyJpZCI6OX0=",
      "node": Object {
        "email": "user9@email.com",
        "id": 9,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTB9",
      "node": Object {
        "email": "user10@email.com",
        "id": 10,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTF9",
      "node": Object {
        "email": "user11@email.com",
        "id": 11,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTJ9",
      "node": Object {
        "email": "user12@email.com",
        "id": 12,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTN9",
      "node": Object {
        "email": "user13@email.com",
        "id": 13,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTR9",
      "node": Object {
        "email": "user14@email.com",
        "id": 14,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTV9",
      "node": Object {
        "email": "user15@email.com",
        "id": 15,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTZ9",
      "node": Object {
        "email": "user16@email.com",
        "id": 16,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTd9",
      "node": Object {
        "email": "user17@email.com",
        "id": 17,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTh9",
      "node": Object {
        "email": "user18@email.com",
        "id": 18,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTl9",
      "node": Object {
        "email": "user19@email.com",
        "id": 19,
      },
    },
    Object {
      "cursor": "eyJpZCI6MjB9",
      "node": Object {
        "email": "user20@email.com",
        "id": 20,
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6MjB9",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6MX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns the first 5 USERs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MX0=",
      "node": Object {
        "email": "user1@email.com",
        "id": 1,
      },
    },
    Object {
      "cursor": "eyJpZCI6Mn0=",
      "node": Object {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    Object {
      "cursor": "eyJpZCI6M30=",
      "node": Object {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    Object {
      "cursor": "eyJpZCI6NH0=",
      "node": Object {
        "email": "user4@email.com",
        "id": 4,
      },
    },
    Object {
      "cursor": "eyJpZCI6NX0=",
      "node": Object {
        "email": "user5@email.com",
        "id": 5,
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6NX0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6MX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns the first 5 USERs after the 1st user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6Mn0=",
      "node": Object {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    Object {
      "cursor": "eyJpZCI6M30=",
      "node": Object {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    Object {
      "cursor": "eyJpZCI6NH0=",
      "node": Object {
        "email": "user4@email.com",
        "id": 4,
      },
    },
    Object {
      "cursor": "eyJpZCI6NX0=",
      "node": Object {
        "email": "user5@email.com",
        "id": 5,
      },
    },
    Object {
      "cursor": "eyJpZCI6Nn0=",
      "node": Object {
        "email": "user6@email.com",
        "id": 6,
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6Nn0=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6Mn0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns the first 5 USERs after the 5th user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6Nn0=",
      "node": Object {
        "email": "user6@email.com",
        "id": 6,
      },
    },
    Object {
      "cursor": "eyJpZCI6N30=",
      "node": Object {
        "email": "user7@email.com",
        "id": 7,
      },
    },
    Object {
      "cursor": "eyJpZCI6OH0=",
      "node": Object {
        "email": "user8@email.com",
        "id": 8,
      },
    },
    Object {
      "cursor": "eyJpZCI6OX0=",
      "node": Object {
        "email": "user9@email.com",
        "id": 9,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTB9",
      "node": Object {
        "email": "user10@email.com",
        "id": 10,
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6MTB9",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6Nn0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns the first 5 USERs after the 15th user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MTZ9",
      "node": Object {
        "email": "user16@email.com",
        "id": 16,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTd9",
      "node": Object {
        "email": "user17@email.com",
        "id": 17,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTh9",
      "node": Object {
        "email": "user18@email.com",
        "id": 18,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTl9",
      "node": Object {
        "email": "user19@email.com",
        "id": 19,
      },
    },
    Object {
      "cursor": "eyJpZCI6MjB9",
      "node": Object {
        "email": "user20@email.com",
        "id": 20,
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6MjB9",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6MTZ9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns the first 5 USERs after the 16th user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MTd9",
      "node": Object {
        "email": "user17@email.com",
        "id": 17,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTh9",
      "node": Object {
        "email": "user18@email.com",
        "id": 18,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTl9",
      "node": Object {
        "email": "user19@email.com",
        "id": 19,
      },
    },
    Object {
      "cursor": "eyJpZCI6MjB9",
      "node": Object {
        "email": "user20@email.com",
        "id": 20,
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6MjB9",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6MTd9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns the first 5 USERs after the 20th user 1`] = `
Object {
  "edges": Array [],
  "pageInfo": Object {
    "endCursor": undefined,
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns the first 5 USERs after user1@email.com 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJlbWFpbCI6InVzZXIyQGVtYWlsLmNvbSJ9",
      "node": Object {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    Object {
      "cursor": "eyJlbWFpbCI6InVzZXIzQGVtYWlsLmNvbSJ9",
      "node": Object {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    Object {
      "cursor": "eyJlbWFpbCI6InVzZXI0QGVtYWlsLmNvbSJ9",
      "node": Object {
        "email": "user4@email.com",
        "id": 4,
      },
    },
    Object {
      "cursor": "eyJlbWFpbCI6InVzZXI1QGVtYWlsLmNvbSJ9",
      "node": Object {
        "email": "user5@email.com",
        "id": 5,
      },
    },
    Object {
      "cursor": "eyJlbWFpbCI6InVzZXI2QGVtYWlsLmNvbSJ9",
      "node": Object {
        "email": "user6@email.com",
        "id": 6,
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJlbWFpbCI6InVzZXI2QGVtYWlsLmNvbSJ9",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJlbWFpbCI6InVzZXIyQGVtYWlsLmNvbSJ9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns the last 5 USERs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MTZ9",
      "node": Object {
        "email": "user16@email.com",
        "id": 16,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTd9",
      "node": Object {
        "email": "user17@email.com",
        "id": 17,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTh9",
      "node": Object {
        "email": "user18@email.com",
        "id": 18,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTl9",
      "node": Object {
        "email": "user19@email.com",
        "id": 19,
      },
    },
    Object {
      "cursor": "eyJpZCI6MjB9",
      "node": Object {
        "email": "user20@email.com",
        "id": 20,
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6MjB9",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6MTZ9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns the last 5 USERs before the 1st user 1`] = `
Object {
  "edges": Array [],
  "pageInfo": Object {
    "endCursor": undefined,
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns the last 5 USERs before the 5th user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MX0=",
      "node": Object {
        "email": "user1@email.com",
        "id": 1,
      },
    },
    Object {
      "cursor": "eyJpZCI6Mn0=",
      "node": Object {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    Object {
      "cursor": "eyJpZCI6M30=",
      "node": Object {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    Object {
      "cursor": "eyJpZCI6NH0=",
      "node": Object {
        "email": "user4@email.com",
        "id": 4,
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6NH0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6MX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns the last 5 USERs before the 6th user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MX0=",
      "node": Object {
        "email": "user1@email.com",
        "id": 1,
      },
    },
    Object {
      "cursor": "eyJpZCI6Mn0=",
      "node": Object {
        "email": "user2@email.com",
        "id": 2,
      },
    },
    Object {
      "cursor": "eyJpZCI6M30=",
      "node": Object {
        "email": "user3@email.com",
        "id": 3,
      },
    },
    Object {
      "cursor": "eyJpZCI6NH0=",
      "node": Object {
        "email": "user4@email.com",
        "id": 4,
      },
    },
    Object {
      "cursor": "eyJpZCI6NX0=",
      "node": Object {
        "email": "user5@email.com",
        "id": 5,
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6NX0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6MX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns the last 5 USERs before the 16th user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MTF9",
      "node": Object {
        "email": "user11@email.com",
        "id": 11,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTJ9",
      "node": Object {
        "email": "user12@email.com",
        "id": 12,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTN9",
      "node": Object {
        "email": "user13@email.com",
        "id": 13,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTR9",
      "node": Object {
        "email": "user14@email.com",
        "id": 14,
      },
    },
    Object {
      "cursor": "eyJpZCI6MTV9",
      "node": Object {
        "email": "user15@email.com",
        "id": 15,
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6MTV9",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6MTF9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection number id and unique field returns the paginated USERs with the base client (sanity check) 1`] = `
Array [
  Object {
    "email": "user6@email.com",
    "id": 6,
  },
  Object {
    "email": "user7@email.com",
    "id": 7,
  },
  Object {
    "email": "user8@email.com",
    "id": 8,
  },
  Object {
    "email": "user9@email.com",
    "id": 9,
  },
  Object {
    "email": "user10@email.com",
    "id": 10,
  },
]
`;

exports[`prisma-relay-cursor-connection returns all TODOs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "id_01",
      "node": Object {
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    Object {
      "cursor": "id_02",
      "node": Object {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    Object {
      "cursor": "id_03",
      "node": Object {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    Object {
      "cursor": "id_04",
      "node": Object {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    Object {
      "cursor": "id_05",
      "node": Object {
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
    Object {
      "cursor": "id_06",
      "node": Object {
        "id": "id_06",
        "isCompleted": true,
        "text": "ut sunt consequuntur",
      },
    },
    Object {
      "cursor": "id_07",
      "node": Object {
        "id": "id_07",
        "isCompleted": false,
        "text": "accusamus aut labore",
      },
    },
    Object {
      "cursor": "id_08",
      "node": Object {
        "id": "id_08",
        "isCompleted": true,
        "text": "et quo quia",
      },
    },
    Object {
      "cursor": "id_09",
      "node": Object {
        "id": "id_09",
        "isCompleted": true,
        "text": "accusantium a excepturi",
      },
    },
    Object {
      "cursor": "id_10",
      "node": Object {
        "id": "id_10",
        "isCompleted": true,
        "text": "deserunt rerum occaecati",
      },
    },
    Object {
      "cursor": "id_11",
      "node": Object {
        "id": "id_11",
        "isCompleted": false,
        "text": "unde et quasi",
      },
    },
    Object {
      "cursor": "id_12",
      "node": Object {
        "id": "id_12",
        "isCompleted": false,
        "text": "et autem sapiente",
      },
    },
    Object {
      "cursor": "id_13",
      "node": Object {
        "id": "id_13",
        "isCompleted": false,
        "text": "deleniti fuga et",
      },
    },
    Object {
      "cursor": "id_14",
      "node": Object {
        "id": "id_14",
        "isCompleted": true,
        "text": "ea molestiae similique",
      },
    },
    Object {
      "cursor": "id_15",
      "node": Object {
        "id": "id_15",
        "isCompleted": false,
        "text": "doloribus ea aut",
      },
    },
    Object {
      "cursor": "id_16",
      "node": Object {
        "id": "id_16",
        "isCompleted": true,
        "text": "ut molestias veniam",
      },
    },
    Object {
      "cursor": "id_17",
      "node": Object {
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    Object {
      "cursor": "id_18",
      "node": Object {
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    Object {
      "cursor": "id_19",
      "node": Object {
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    Object {
      "cursor": "id_20",
      "node": Object {
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "id_20",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "id_01",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 TODOs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "id_01",
      "node": Object {
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    Object {
      "cursor": "id_02",
      "node": Object {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    Object {
      "cursor": "id_03",
      "node": Object {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    Object {
      "cursor": "id_04",
      "node": Object {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    Object {
      "cursor": "id_05",
      "node": Object {
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "id_05",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "id_01",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 TODOs after the 1st todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "id_02",
      "node": Object {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    Object {
      "cursor": "id_03",
      "node": Object {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    Object {
      "cursor": "id_04",
      "node": Object {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    Object {
      "cursor": "id_05",
      "node": Object {
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
    Object {
      "cursor": "id_06",
      "node": Object {
        "id": "id_06",
        "isCompleted": true,
        "text": "ut sunt consequuntur",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "id_06",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "id_02",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 TODOs after the 5th todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "id_06",
      "node": Object {
        "id": "id_06",
        "isCompleted": true,
        "text": "ut sunt consequuntur",
      },
    },
    Object {
      "cursor": "id_07",
      "node": Object {
        "id": "id_07",
        "isCompleted": false,
        "text": "accusamus aut labore",
      },
    },
    Object {
      "cursor": "id_08",
      "node": Object {
        "id": "id_08",
        "isCompleted": true,
        "text": "et quo quia",
      },
    },
    Object {
      "cursor": "id_09",
      "node": Object {
        "id": "id_09",
        "isCompleted": true,
        "text": "accusantium a excepturi",
      },
    },
    Object {
      "cursor": "id_10",
      "node": Object {
        "id": "id_10",
        "isCompleted": true,
        "text": "deserunt rerum occaecati",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "id_10",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "id_06",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 TODOs after the 15th todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "id_16",
      "node": Object {
        "id": "id_16",
        "isCompleted": true,
        "text": "ut molestias veniam",
      },
    },
    Object {
      "cursor": "id_17",
      "node": Object {
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    Object {
      "cursor": "id_18",
      "node": Object {
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    Object {
      "cursor": "id_19",
      "node": Object {
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    Object {
      "cursor": "id_20",
      "node": Object {
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "id_20",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "id_16",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 TODOs after the 16th todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "id_17",
      "node": Object {
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    Object {
      "cursor": "id_18",
      "node": Object {
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    Object {
      "cursor": "id_19",
      "node": Object {
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    Object {
      "cursor": "id_20",
      "node": Object {
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "id_20",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "id_17",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 TODOs after the 20th todo 1`] = `
Object {
  "edges": Array [],
  "pageInfo": Object {
    "endCursor": undefined,
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 completed TODOs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "id_04",
      "node": Object {
        "id": "id_04",
        "isCompleted": true,
      },
    },
    Object {
      "cursor": "id_05",
      "node": Object {
        "id": "id_05",
        "isCompleted": true,
      },
    },
    Object {
      "cursor": "id_06",
      "node": Object {
        "id": "id_06",
        "isCompleted": true,
      },
    },
    Object {
      "cursor": "id_08",
      "node": Object {
        "id": "id_08",
        "isCompleted": true,
      },
    },
    Object {
      "cursor": "id_09",
      "node": Object {
        "id": "id_09",
        "isCompleted": true,
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "id_09",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "id_04",
  },
  "totalCount": 11,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 TODOs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "id_16",
      "node": Object {
        "id": "id_16",
        "isCompleted": true,
        "text": "ut molestias veniam",
      },
    },
    Object {
      "cursor": "id_17",
      "node": Object {
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    Object {
      "cursor": "id_18",
      "node": Object {
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    Object {
      "cursor": "id_19",
      "node": Object {
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    Object {
      "cursor": "id_20",
      "node": Object {
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "id_20",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "id_16",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 TODOs before the 1st todo 1`] = `
Object {
  "edges": Array [],
  "pageInfo": Object {
    "endCursor": undefined,
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 TODOs before the 5th todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "id_01",
      "node": Object {
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    Object {
      "cursor": "id_02",
      "node": Object {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    Object {
      "cursor": "id_03",
      "node": Object {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    Object {
      "cursor": "id_04",
      "node": Object {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "id_04",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "id_01",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 TODOs before the 6th todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "id_01",
      "node": Object {
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    Object {
      "cursor": "id_02",
      "node": Object {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    Object {
      "cursor": "id_03",
      "node": Object {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    Object {
      "cursor": "id_04",
      "node": Object {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    Object {
      "cursor": "id_05",
      "node": Object {
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "id_05",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "id_01",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 TODOs before the 16th todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "id_11",
      "node": Object {
        "id": "id_11",
        "isCompleted": false,
        "text": "unde et quasi",
      },
    },
    Object {
      "cursor": "id_12",
      "node": Object {
        "id": "id_12",
        "isCompleted": false,
        "text": "et autem sapiente",
      },
    },
    Object {
      "cursor": "id_13",
      "node": Object {
        "id": "id_13",
        "isCompleted": false,
        "text": "deleniti fuga et",
      },
    },
    Object {
      "cursor": "id_14",
      "node": Object {
        "id": "id_14",
        "isCompleted": true,
        "text": "ea molestiae similique",
      },
    },
    Object {
      "cursor": "id_15",
      "node": Object {
        "id": "id_15",
        "isCompleted": false,
        "text": "doloribus ea aut",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "id_15",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "id_11",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the paginated TODOs with the base client (sanity check) 1`] = `
Array [
  Object {
    "id": "id_06",
    "isCompleted": true,
    "text": "ut sunt consequuntur",
  },
  Object {
    "id": "id_07",
    "isCompleted": false,
    "text": "accusamus aut labore",
  },
  Object {
    "id": "id_08",
    "isCompleted": true,
    "text": "et quo quia",
  },
  Object {
    "id": "id_09",
    "isCompleted": true,
    "text": "accusantium a excepturi",
  },
  Object {
    "id": "id_10",
    "isCompleted": true,
    "text": "deserunt rerum occaecati",
  },
]
`;
